# pico-w-explorer

./: .gitignore  CLAUDE.md  LICENSE  README.md  deploy.sh  pyproject.toml  requirements-test.txt  requirements.txt
docs/: mpremote-complete-reference.md  skeleton.md  tick-driven-testing.md
examples/: WIFI_CONFIG.py  balls_demo.py  button.py  button_test.py  buzz.py  chapter-02.py  chapter-03.py  chapter-05.py  chapter-05A.py  chapter-05B.py  chapter-06.py  chapter-07.py  chromatic.py  hello-w-lcd.py  i2c-scan.py  pride.py  resistance.py  rgb-spike.py  servos.py  thermometer.py  tones.py  wifi-spike.py  wifi-test.py
plan/: progress-2026-03-09.md  progress-2026-03-10.md  progress-2026-03-11.md  progress-2026-03-15.md  progress-2026-04-25.md
src/pico_w_explorer/: WIFI_CONFIG.py.example  __init__.py  application.py  bst_gmt.py  colour.py  focus_reminder.py  main.py  ports.py  text_spec.py  widgets.py
src/pico_w_explorer/adapters/: __init__.py  pico_button.py  pico_buzzer.py  pico_clock.py  pico_display.py  pico_led.py
src/pico_w_explorer/ports/: __init__.py  button.py  buzzer.py  clock.py  display.py  led.py
tests/: builders.py  fakes.py  matchers.py  test_application.py  test_bst_gmt.py  test_colour.py  test_fake_clock.py  test_focus_reminder.py  test_text_spec.py  test_walking_skeleton.py  test_widgets.py
tests/adapters/: fake_button.py  fake_buzzer.py  fake_clock.py  fake_display.py  fake_led.py
